# worker_fetch

./: Cargo.toml  README.md  package.json  pre.js  wrangler.toml
.github/workflows/: .travis.yml  main.yml  repository_dispatch.yml
src/: lib.rs
worker/: worker.js
worker-build/: Cargo.toml  ReadMe.md
worker-build/src/: main.rs
