[package]
name = "worker_fetch_demo"
version = "0.1.0"
authors = ["ffimnsr"]
edition = "2021"
#publish = false
description = "A worker with fetch functionality demo."
license = ""

[lib] #edition = "2021"
#name = "build"https://github.com/cloudflare/rustwasm-worker-template/blob/master/Cargo.toml
#path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]

worker-build = { git = "https://github.com/nickcarducci/worker_build", path = "worker-build", branch = "master" }
cfg-if = "1.0.0"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
worker = "0.0.10"
cc = "1.0"

# `std::fmt` and `std::panicking`
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` ~1K : default ~10K (faster).
wee_alloc = { version = "0.4.2", optional = true }

futures = { version = "0.3", default-features = false }
js-sys = "0.3.45"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.137", features = ["derive"] }
# serde_derive = "^1.0.59"
serde_json = "1.0.81"
log = "0.4"
console_log = { version = "0.2", optional = true }

[dependencies.web-sys]
version = "0.3.45"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'Response',
  'ServiceWorkerGlobalScope',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release] # Tell `rustc` to optimize for small code size.
opt-level = "s"
